k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securi
  labels:
    app.kubernetes.io/part-of: securi
